@@ -4,7 +4,6 @@ import io.cucumber.java.Before;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import nz.ac.canterbury.seng302.gardenersgrove.controller.Garden2DController;
-import nz.ac.canterbury.seng302.gardenersgrove.controller.GardensController;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.Garden;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.User;
 import nz.ac.canterbury.seng302.gardenersgrove.repository.GardenRepository;
@@ -26,6 +25,7 @@ import org.springframework.web.servlet.ModelAndView;
 import java.util.Map;
 
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+
 @SpringBootTest
 public class U5002_2D_Garden_Edit {
     public static MockMvc mockMVC;
@@ -51,10 +51,12 @@ public class U5002_2D_Garden_Edit {
 
     @Autowired
     public UserRepository userRepository;
+
     @Autowired
     public SecurityService securityService;
 
     private Map<String, Object> model;
+
     @Before
     public void before_or_after_all() {
         gardenService = new GardenService(gardenRepository, userService);
@@ -63,13 +65,14 @@ public class U5002_2D_Garden_Edit {
         Garden2DController garden2DController = new Garden2DController(gardenService, securityService);
         mockMVC = MockMvcBuilders.standaloneSetup(garden2DController).build();
     }
+
     @Given("I as user {string} is on my two-D garden page for {string}")
     public void iAsUserIsOnMyDGardenPageFor(String email, String gardenName) throws Exception {
         user = userService.getUserByEmail(email);
-        garden = user.getGardens().getFirst();
+        garden = user.getGardens().get(0);
         mvcResult = mockMVC.perform(
-                        MockMvcRequestBuilders
-                                .get("/2D-garden/{gardenId}", garden.getGardenId()))
+                MockMvcRequestBuilders
+                        .get("/2D-garden/{gardenId}", garden.getGardenId()))
                 .andExpect(status().isOk()).andReturn();
     }
 
@@ -79,10 +82,10 @@ public class U5002_2D_Garden_Edit {
         Assertions.assertNotNull(modelAndView);
         model = modelAndView.getModel();
 
-        //palette window page
+        // palette window page
         Assertions.assertTrue(model.containsKey("currentPage"));
 
-        //plants
+        // plants
         Assertions.assertTrue(model.containsKey("plants"));
     }
 }
